# setup-environment-Adriex

./: .cheatsheet  .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  Doxyfile  Tp0  build.ninja  cmake_install.cmake
.github/actions/coverage_and_test/: action.yml
include/: adder.h
lib/libdyn/: CMakeLists.txt  cmake_install.cmake
lib/libdyn/include/: libdyn.h
lib/libdyn/src/: libdyn.c
lib/libsta/: CMakeLists.txt  cmake_install.cmake
lib/libsta/include/: libsta.h
lib/libsta/src/: libsta.c
src/: adder.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
